--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.2",
+    "@angular/animations": "^10.0.7",
+    "@angular/cdk": "^10.1.2",
     "@angular/common": "~10.0.2",
     "@angular/compiler": "~10.0.2",
     "@angular/core": "~10.0.2",
@@ -20,7 +21,10 @@
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
     "bootstrap": "4.1.1",
+    "jspdf": "^1.5.3",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-loading": "^8.0.0",
+    "ngx-toastr": "^13.0.0",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0-rc.1",
     "rxjs": "~6.5.5",
