Ajuste Arquivo README

--- a/api/.env
+++ b/api/.env
@@ -1,9 +1,5 @@
 APP_NAME=vr_software
 
-SECRET_API=9as1%12#xz0#@
-
-CPUS=4
-
 #Porta da API
 PORT=3000
 
@@ -14,4 +10,4 @@ DB_USER=vr
 DB_PASS=123
 
 # Stack
-STACK=["Angular", "NodeJS"]
+STACK=["Angular", "NodeJS", "MySql"]
